--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vidstack/react": "^1.10.9",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.22.1",
     "react-tilt": "^1.0.2"
   },
